@@ -1,3 +1,4 @@
+1938 [One-Click] fixed language pre-selection if the default languages are not different. Bug #3178016
 1937 [XviD] enhanced overflow handling in the settings dialogue
 1936 audio encoding job can be added without existing input file
 1935 AssumeFPS() will be added to DirectShow(), DSS2() and FFVideoSource() scripts
